# ha-solar-energy-optimizer

./: .gitignore  CHANGELOG.md  CODE_FLOW.md  CONTRIBUTING.md  DEVELOPMENT.md  DRY_RUN_FEATURE.md  GITHUB_AUTOMATION.md  INSTALLATION.md  LICENSE  LOCAL_TESTING.md  README.md  REPOSITORY_INFO.md  hacs.json  info.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: hacs-validation.yml  quality.yml  release.yml
custom_components/solax_energy_optimizer/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/solax_energy_optimizer/adapters/: __init__.py  base.py  factory.py  frank_energie.py  generic_forecast.py  generic_inverter.py  generic_price.py  solax_modbus.py  solcast.py
examples/: automations.yaml
scripts/: release.sh
tests/: conftest.py
tests/adapters/: test_factory.py  test_forecast_adapters.py  test_inverter_adapters.py  test_price_adapters.py
