[project]
name = "solar-energy-optimizer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "homeassistant>=2024.1.0",
    "voluptuous>=0.13.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-homeassistant-custom-component>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
